k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lehra-service
  namespace: lehra
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: lehra
  type: ClusterIP
